# piano

./: .credo.exs  .dockerignore  .env  .formatter.exs  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  initial_discussion.md  main.exs  mix.exs  search_duckduckgo.exs  search_duckduckgo.py  test_github_tools_agent.exs  todo.md
.agents/: AGENTS.md
.agents/github-tools/: README.md  mise.toml  pyproject.toml  repo_prs.py  requirements.txt  starred_repos.py
.codex/: config.toml
.opencode/: opencode.json
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: asr_tts_status.md  qwen3_asr_integration_plan.md  voice_vision_architecture.md
docs/ai_docs/: codex_app_server.md  codex_config.md
docs/ai_report/: architecture_review.md  product_improvements.md  security_recommendations.md  task_warrior_simple.md  vision_mcp_implementation.md  waking_agent_scheduler.md
infra/llama-swap/: Dockerfile  config.yaml
lib/: ex_unit_stub.ex  piano.ex  piano_web.ex
tasks/: TASK-001-surface-schema.md  TASK-002-agent-schema.md  TASK-003-thread-schema.md  TASK-004-interaction-schema.md  TASK-005-interaction-item-schema.md  TASK-006-codex-client.md  TASK-007-codex-start-turn.md  TASK-008-surface-behaviour.md  TASK-009-telegram-surface.md  TASK-010-interaction-pipeline.md  TASK-011-mock-llm-server.md  TASK-012-codex-integration-test.md  TASK-013-telegram-bot.md  TASK-014-e2e-telegram-test.md  prd-piano-v2.md  prd-piano.md  prd-production-hardening.md  prd-telegram-ux-improvements.md
test/: piano_test.exs  test_helper.exs
(+163 files in other folders)
